2010-08-25  Onkar Shinde  <onkarshinde@gmail.com>

	* README, TODO, doc/asm-guide.txt, doc/gnusim8085.1: Update website URL.

2010-08-22  Onkar Shinde  <onkarshinde@gmail.com>

	* installer.nsi.in: Allow specifying mingw home directory via command
	line arguments when creating installer. Split translations in separate
	component so that users can choose not to install them. Add
	asm-guide.txt file to the list of files to be installed. Add iconv.dll
	file as well to make the application work with default install of
	latest GTK+ runtime.
	* src/support.[c,h]: Add function to load tutorial from asm-guide.txt.
	* src/interface.[c,h]: Add function to create interface to display
	tutorial.
	* src/callbacks.[c,h]: Add function to display tutorial text. Modify
	callback functions to show the tutorial instead of just pointing to it.
	Fixes LP: #579317.
	* po/gnusim8085.pot, po/*.po: Updated as per latest UI changes.

2010-08-17  Onkar Shinde  <onkarshinde@gmail.com>

	* src/*.c, src/*.h, src/Makefile.am: Add editable I/O listing as a tab.
	This is based on Debajit's work for memory editing. Hence copyright of
	new files stays with him. Fixes LP: #579324.

2010-06-22  Onkar Shinde  <onkarshinde@gmail.com>

	* src/*.[c,h]: Fix postal adress of FSF in file headers. Makes
	licensecheck program in Debian happy.
	* COPYING: Include exact text of license as available on FSF's website.
	Includes address change ans other minor formatting changes.
	* data/8085asm.lang: Add copyright/license information.
	* config.guess, config.sub: Update to a bit recent copy of the files.
	* Makefile.am: Do not install ChangeLog. Let distributions decide if
	it should be included in binary packages.

2010-06-20  Onkar Shinde  <onkarshinde@gmail.com>

	* po/pt_BR.po: Updated Brazilian Portuguese translation from launchpad.
	* src/gui-list-message.c: Wrap assembler messages in the table cells.
	Fixes UI problems when messages or translations are too long.